--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/DtttksD/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Volunteer Management</title>
+    <title>Volunary | Volunteer Management</title>
   </head>
   <body class="bg-[#F8F9FA]">
     <div id="root"></div>
