--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
   <body class="bg-[#F8F9FA]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init({
+          publicKey: "tTfEzV_aqC4--V3G_",
+        });
+      })();
+    </script>
   </body>
 </html>
